quedaron las cards del index

--- a/index.html
+++ b/index.html
@@ -123,78 +123,89 @@
       <h4 class="subtitDer">COMIDAS</h4>
       <div id="derTipoComida">
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/cute-cartoon-burger-icon-free-png.webp" class="card-img-top" alt="opcion hamburguesas"
+            style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Hamburguesas</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores hamburguesas disponibles!</p>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
+          </div>
+        </div>
+        <div class="card" style="width: 14rem; ">
+          <img src="./imagenes/pngimg.com - pizza_PNG43989.png" class="card-img-top" alt="opcion pizza"
+            style="object-fit: cover; height: 10rem;">
+          <div class="card-body">
+            <h5 class="card-title">Pizzas</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores pizzas disponibles!</p>
+            <br>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/homemade-breaded-chicken-schnitzel-isolated-on-transparent-background-png.png"
+            class="card-img-top" alt="opcion milanesa" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Milanesas</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores milanesas disponibles!</p>
+            <br>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/empanada-criollas.png" class="card-img-top" alt="opcion empanada" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Empanadas</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores empanadas disponibles!</p>
+            <br>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/pasta-isolated-on-a-transparent-background-png.webp" class="card-img-top" alt="opcion pasta" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Pastas</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores pastas disponibles!</p>
+            <br>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
+          </div>
+        </div>
+        <div class="card" style="width: 14rem;">
+          <img src="./imagenes/delicious-spinach-salad-with-fresh-png.webp" class="card-img-top" alt="opcion ensalada" style="object-fit: cover; height: 10rem;">
+          <div class="card-body">
+            <h5 class="card-title">Ensalada</h5>
+            <p class="card-text">Deleitate con una seleccion de las mejores ensaladas disponibles!</p>
+            <br>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
       </div>
+
+
+
       <h4 class="subtitDer">Recomendaciones</h4>
       <div id="derRecomendaciones">
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/descarga.png" class="card-img-top" alt="resto food and love" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Food and love</h5>
+            <p class="card-text">Si quieres tener una experiencia increible te recomendamos uno de los mejores restaurantes disponibles en nuestro sitio!</p>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/descarga (1).png" class="card-img-top" alt="resto garage burger" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Garage Burger</h5>
+            <p class="card-text">Si quieres tener una experiencia increible te recomendamos uno de los mejores restaurantes disponibles en nuestro sitio!</p>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
         <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
+          <img src="./imagenes/descarga.jpeg" class="card-img-top" alt="opcion los molinos" style="object-fit: cover; height: 10rem;">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-        <div class="card" style="width: 14rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Los Molinos</h5>
+            <p class="card-text">Si quieres tener una experiencia increible te recomendamos uno de los mejores restaurantes disponibles en nuestro sitio!</p>
+            <a href="#" class="btn btn-primary">Seleccionar</a>
           </div>
         </div>
       </div>
